--- a/_data/otherpubs.yml
+++ b/_data/otherpubs.yml
@@ -1,25 +1,26 @@
 ---
-- title: Wait…I never signed up to be an economist.
-  authors: Derya Akbaba, Kiran Gadhave
-  journal: Visualization Design Lab Blog
-  year: 2021
-  date: 11-2021
-  links: <a href="https://vdl.sci.utah.edu/blog/2021/12/08/fair-pay-panel/">blog post</a>
-- title: Manifesto for Putting Chartjunk in the Trash 2021!
-  authors: Derya Akbaba, Jack Wilburn, Miriah Meyer
-  journal: Visualization Design Lab Blog
-  year: 2021
-  date: 10-2021
-  links: <a href="https://vdl.sci.utah.edu/blog/2021/09/19/chartjunk/">blog post</a>
+- title: Critical Data Visualization—Part II
+  authors: Georgia Panagiotidou, Andrew McNutt, Derya Akbaba, Nicole Hengesbach, Miriah Meyer
+  journal: IEEE Computer Graphics and Applications, 45(4):11-13
+  year: 2025
+  date: 11-2025
+  links: <a href="https://doi.org/10.1109/MCG.2025.3585321">guest editors' introduction</a>
+- title: Critical Data Visualization—Part I
+  authors: Georgia Panagiotidou, Andrew McNutt, Derya Akbaba, Nicole Hengesbach, Miriah Meyer
+  journal: IEEE Computer Graphics and Applications, 45(3):14-16
+  year: 2025
+  date: 10-2025
+  links: <a href="https://doi.org/10.1109/MCG.2025.3579638">guest editors' introduction</a>
+- title: "Visualization and the Humanities: Towards a Shared Research Agenda (Dagstuhl Seminar 23381)"
+  authors: Johanna Drucker, Mennatallah El-Assady, Uta Hinrichs, Florian Windhager, Derya Akbaba 
+  journal: 
+  year: 2024
+  date: 08-2024
+  links: <a href="https://doi.org/10.4230/DagRep.13.9.137">report</a>
 - title: "Visualizing Uncertainty: What can graphics convey about the character of data?"
   authors: Derya Akbaba
   journal: Natural History Magazine
   year: 2020
-  date: 11-2020
-  links: <a href="http://127.0.0.1:4000/assets/papers/Sep20-NH-digital-edition.pdf">personal copy of article</a>
-- title: State COVID-19 Dashboard
-  authors: Derya Akbaba
-  journal: Visualization Design Lab Blog
-  year: 2020
-  date: 10-2020
-  links: <a href="https://vdl.sci.utah.edu/blog/2020/07/20/state-dashboards/">blog post</a> & cited in <a href="https://press.princeton.edu/books/paperback/9780691208053/a-city-is-not-a-computer">A City is Not a Computer</a>
+  date: 09-2020
+  links: <a href="https://gotdairyya.github.io/assets/papers/Sep20-NH-digital-edition.pdf">personal copy of article</a>
+
