Add VK talk link

--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -126,6 +126,6 @@
   country: Finlad
   year: June 2025
   date: 07-2027
-  video:
-  link:
+  video: VK25
+  link: https://vimeo.com/1147272131
   order: 11
